--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My second attemp at my first website</title>
+        <link rel="stylesheet" href="style.css">
+        <title>My Webite</title>
     </head>
     <body>
         <h1>Hello World!</h1>
