added some styling and more text

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>My Webite</title>
+        <title>Michael Ramirez: Software Engineer Student</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Michael S Ramirez</h1>
+        <p>Having just moved to Denver about 6 months ago, I am about to start a full immersive software engineering program with Flatiron School. I love creating things from scratch, soccer, and video games.</p>
         <script src="script.js"></script</script>
     </body>
 </html>
