--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Michael S Ramirez</h1>
+        <img src="./pics/me.jpg">
         <p>Having just moved to Denver about 6 months ago, I am about to start a full immersive software engineering program with Flatiron School. I love creating things from scratch, soccer, and video games.</p>
         <script src="script.js"></script</script>
     </body>
